--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,14 @@
     background-color: #ffffff;
 }
 
+.container { 
+    max-width: 1440px;
+    padding-left: 156px;
+    padding-right: 156px;
+    margin-left: 24px;
+    margin-right: 24px;
+}
+
 /* Header */
 
 .header-nav {
