--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,8 @@ address {
 .header-container {
     display: flex;
     align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-nav {
@@ -67,8 +69,6 @@ address {
     display: flex;
     align-items: center;
     flex-grow: 1;
-    padding-top: 24px;
-    padding-bottom: 24px;
 
 }
 
@@ -326,6 +326,13 @@ address {
     color: #2e2f42;
 }
 
+.portfolio-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
+
 .portfolio-title {
     color: #2E2F42;
     font-family: "Roboto", sans-serif;
@@ -342,13 +349,14 @@ address {
     display: flex;
     flex-wrap: wrap;
     gap: 24px 48px;
-    width: calc((100% - 72px) / 3);
+    width: calc((100% - 48px) / 3);
+    column-gap: 24px;
+    row-gap: 48px;
 
 }
 
 .portfolio-item {
-    border: 1px solid var(--CORNFLOWER, #E7E9FC);
-    background: var(--WHITE, #FFF);
+    
 }
 
 .portfolio-foto {
