--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@ button {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 address {
@@ -49,6 +51,8 @@ address {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .header-container {
@@ -211,6 +215,19 @@ address {
 
 /* Section two */
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 .description {
 
 }
@@ -331,6 +348,7 @@ address {
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
+
 }
 
 .portfolio-title {
@@ -356,11 +374,12 @@ address {
 }
 
 .portfolio-item {
-    
+    border: 1px solid var(--CORNFLOWER, #E7E9FC);
+    background: var(--WHITE, #FFF);
 }
 
 .portfolio-foto {
-    
+    margin-bottom: 32px;
 }
 
 .portfolio-subtitle {
@@ -371,7 +390,8 @@ address {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    
+    margin-bottom: 8px;
+    margin-left: 16px;
 }
 
 .portfolio-text {
@@ -382,7 +402,8 @@ address {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    
+    margin-bottom: 32px;
+    margin-left: 16px;
 }
 
 /* Footer */
