--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,9 @@ address {
     letter-spacing: 0.02em;
     margin-bottom: 48px;
     max-width: 496px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 
 .main-button {
@@ -206,6 +209,10 @@ address {
     height: 56px;
     border: none;
     padding: 16px 32px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    margin-top: 48px;
 }
 
 .main-button:hover,
@@ -301,6 +308,7 @@ address {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     width: ((100% - 72px) / 4);
+    padding: 32px 0;
 }
 
 .members-img {
