--- a/css/styles.css
+++ b/css/styles.css
@@ -328,6 +328,7 @@ address {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .card-item {
@@ -340,6 +341,7 @@ address {
     line-height: 24px;
     letter-spacing: 0.02em;
     margin-bottom: 32px;
+    text-align: center;
 }
 
 /* Section four */
