--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ address {
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 
@@ -51,15 +52,12 @@ address {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 .header-container {
     display: flex;
     align-items: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    
 }
 
 .header-nav {
@@ -120,7 +118,7 @@ address {
 }
 
 .header-list-item {
-    
+    padding: 24px 0;
 }
 
 .header-contacts {
