--- a/css/styles.css
+++ b/css/styles.css
@@ -51,15 +51,11 @@ address {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 .header-container {
     display: flex;
     align-items: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .header-nav {
@@ -96,6 +92,7 @@ address {
     text-transform: uppercase;
     color: #4d5ae5;
     margin-right: 76px;
+    padding: 0 15px;
 
 }
 
@@ -151,6 +148,7 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding: 24px 0;
 }
 
 .address:hover,
